--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./web.js"
+    "start": "nodemon ./web.js"
   },
   "dependencies": {
     "cookie-parser": "^1.4.5",
@@ -15,7 +15,8 @@
     "http-errors": "~1.6.3",
     "morgan": "^1.9.1",
     "mysql": "^2.18.1",
-    "socket.io": "^3.1.2"
+    "socket.io": "^3.1.2",
+    "walkway.js": "0.0.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
