--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.10.0",
     "http-errors": "~1.6.3",
+    "iamporter": "^1.4.2",
     "moment": "^2.29.1",
     "morgan": "^1.9.1",
     "mysql": "^2.18.1",
